RESOLVED FIXED89830
[EFL] Hyphenation is not supported
https://bugs.webkit.org/show_bug.cgi?id=89830
Summary [EFL] Hyphenation is not supported
Chris Dumez
Reported 2012-06-24 08:44:11 PDT
The EFL port does not support hyphenation causing several tests to not behave as expected. For e.g. fast/text/hyphenate-first-word.html fast/text/hyphenate-locale.html fast/text/hyphen-min-preferred-width.html Some of those tests are unskipped because they have EFL-specific results without hyphenation. The Mac port supports hyphenation and their results look quite different. The GTK port does not support hyphenation either (Bug 44478).
Attachments
Patch (632.30 KB, patch)
2015-06-22 18:51 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2015-06-22 18:51:03 PDT
Gyuyoung Kim
Comment 2 2015-06-22 19:47:12 PDT
Comment on attachment 255388 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=255388&action=review > Source/WebCore/PlatformEfl.cmake:544 > + add_definitions(-DTEST_HYPHENATAION_PATH=\"${CMAKE_SOURCE_DIR}/WebKitBuild/DependenciesEFL/Root/webkitgtk-test-dicts\") We need to add webkitgtk-test-dicts to jhbuild list.
Gyuyoung Kim
Comment 3 2015-06-22 21:51:00 PDT
Comment on attachment 255388 [details] Patch ok, EFL ews didn't download *webkitgtk-test-dicts* using jhbuild. Let me run it after landing this patch. I believe that GTK folk don't mind to move HyphenationLibHyphen.cpp to common place.
Ryuan Choi
Comment 4 2015-06-22 22:24:51 PDT
Comment on attachment 255388 [details] Patch Clearing flags on attachment: 255388 Committed r185862: <http://trac.webkit.org/changeset/185862>
Ryuan Choi
Comment 5 2015-06-22 22:24:58 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 6 2015-06-22 23:15:03 PDT
(In reply to comment #4) > Comment on attachment 255388 [details] > Patch > > Clearing flags on attachment: 255388 > > Committed r185862: <http://trac.webkit.org/changeset/185862> It broke the EFL build as the EWS noticed: -- Could NOT find HYPHEN (missing: HYPHEN_INCLUDE_DIR HYPHEN_LIBRARIES) CMake Error at Source/cmake/OptionsEfl.cmake:296 (message): libhyphen is needed for USE_LIBHYPHEN. Call Stack (most recent call first): CMakeLists.txt:163 (include) Why did you land it before installing this new dependency on the EWS and the buildbot? Additionally you should have added libhyphen-dev to Tools/efl/install-dependencies in this patch.
Csaba Osztrogonác
Comment 7 2015-06-22 23:23:19 PDT
I added libhyphen-dev to Tools/efl/install-dependencies in bug146230 and will install this library on the ARM bots and the perf bot too.
Ryuan Choi
Comment 8 2015-06-23 00:44:25 PDT
(In reply to comment #6) > (In reply to comment #4) > > Comment on attachment 255388 [details] > > Patch > > > > Clearing flags on attachment: 255388 > > > > Committed r185862: <http://trac.webkit.org/changeset/185862> > > It broke the EFL build as the EWS noticed: > > -- Could NOT find HYPHEN (missing: HYPHEN_INCLUDE_DIR HYPHEN_LIBRARIES) > CMake Error at Source/cmake/OptionsEfl.cmake:296 (message): > libhyphen is needed for USE_LIBHYPHEN. > Call Stack (most recent call first): > CMakeLists.txt:163 (include) > > Why did you land it before installing this new dependency on the EWS > and the buildbot? Additionally you should have added libhyphen-dev > to Tools/efl/install-dependencies in this patch. Sorry, I fogot it. I just asked to gyuyoung to install libhyphen-dev. I will consider it more carefully next time. (In reply to comment #7) > I added libhyphen-dev to Tools/efl/install-dependencies in bug146230 > and will install this library on the ARM bots and the perf bot too. Thanks.
Note You need to log in before you can comment on or make changes to this bug.