[EFL] Hyphenation is not supported https://bugs.webkit.org/show_bug.cgi?id=89830

Reviewed by Gyuyoung Kim.

.:

* Source/cmake/OptionsEfl.cmake: Added an option for LibHyphen.

Source/WebCore:

Share libHyphen backend of GTK port.

Rebased fast/text/hyphenate-*.html

* PlatformEfl.cmake:
* PlatformGTK.cmake:
* platform/efl/FileSystemEfl.cpp:
(WebCore::listDirectory): Deleted because of lack of functionality.
eina_file_ls returns full directory path so fnmatch fails to check dict file.
This patch reuse Posix implementation instead of EFL port specific function.
* platform/posix/FileSystemPOSIX.cpp: Ditto.
* platform/text/gtk/HyphenationLibHyphen.cpp: Moved to platform/text/hyphen
* platform/text/hyphen/HyphenationLibHyphen.cpp:
Renamed from Source/WebCore/platform/text/gtk/HyphenationLibHyphen.cpp.
(WebCore::scanTestDictionariesDirectoryIfNecessary):
Added PLATFORM guard and EFL implementation for the test directory

Tools:

* efl/jhbuild.modules: Added webkitgtk-test-dicts for layout test.

LayoutTests:

Rebaseline expected results which is related to hyphenation.

* platform/efl/TestExpectations: Unskip hyphenate-locale.html
* platform/efl/fast/text/hyphenate-character-expected.png:
* platform/efl/fast/text/hyphenate-character-expected.txt:
* platform/efl/fast/text/hyphenate-first-word-expected.png:
* platform/efl/fast/text/hyphenate-first-word-expected.txt:
* platform/efl/fast/text/hyphenate-limit-before-after-expected.png:
* platform/efl/fast/text/hyphenate-limit-before-after-expected.txt:
* platform/efl/fast/text/hyphenate-limit-lines-expected.png:
* platform/efl/fast/text/hyphenate-limit-lines-expected.txt:
* platform/efl/fast/text/hyphenate-locale-expected.png: Added.
* platform/efl/fast/text/hyphenate-locale-expected.txt: Added.
* platform/efl/fast/text/hyphens-expected.png:
* platform/efl/fast/text/hyphens-expected.txt:

Canonical link: https://commits.webkit.org/164302@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185862 268f45cc-cd09-0410-ab3c-d52691b4dbfc